fix layout bug and coach list page(issue #43)

--- a/client/views/home_private/home_private.css
+++ b/client/views/home_private/home_private.css
@@ -25,6 +25,11 @@
 
 }
 
+.home-layout{
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 .list-div{
     display: table;
     width: 100%;
